--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+    "cropper": "^3.1.3",
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^5.0.0-rc0",
     "timeago.js": "^2.0.3",
     "vue": "^2.2.6",
+    "vue-cropperjs": "^2.2.0",
     "vue-router": "^2.3.0",
+    "vue-upload-component": "^2.7.4",
     "vue-upload-image": "^1.0.5",
     "vuex": "^2.2.1"
   },
