--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "cors": "^2.8.4",
     "cropper": "^3.1.3",
     "jsonwebtoken": "^8.1.0",
+    "mkdirp": "^0.5.1",
     "mongoose": "^5.0.0-rc0",
+    "node-thumbnail": "^0.13.0",
     "timeago.js": "^2.0.3",
     "vue": "^2.2.6",
+    "vue-carousel": "^0.6.5",
+    "vue-carousel-3d": "^0.1.19",
     "vue-cropperjs": "^2.2.0",
     "vue-router": "^2.3.0",
     "vue-upload-component": "^2.7.4",
