--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
     "lint": "eslint --ext .js,.vue src",
-    "start": "npm run build & node server/app.js"
+    "start": "node server/app.js"
   },
   "keywords": [
     "cnode",
