--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
+    "connect-history-api-fallback": "^1.5.0",
     "cors": "^2.8.4",
     "cropper": "^3.1.3",
     "express": "^4.16.2",
