--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.4",
     "cropper": "^3.1.3",
     "express": "^4.16.2",
+    "express-fileupload": "^0.3.0",
     "jsonwebtoken": "^8.1.0",
     "mkdirp": "^0.5.1",
     "mongoose": "^5.0.0-rc0",
@@ -33,6 +34,7 @@
     "vue-carousel": "^0.6.5",
     "vue-carousel-3d": "^0.1.19",
     "vue-cropperjs": "^2.2.0",
+    "vue-loading-spinner": "^1.0.11",
     "vue-router": "^2.3.0",
     "vue-upload-component": "^2.7.4",
     "vue-upload-image": "^1.0.5",
